--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -72,34 +72,41 @@
         </div>
     </section>    
 
-    <section class="news">
-        <div class="container">
-            <div class="title-heading">
-               <h3>Aktualności</h3>
+    <div class="my-grid">
+        <div class="wrapper">
+            <div class="images">
+                <img src="/images/hiking.jpg" alt="">
             </div>
-            <div class="activities-grid">
-                <div class="activate-grid-item description">
-                    <i class="icon ion-md-star"></i>
-                    <h1>Star Gazing</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="activate-grid-item">
-                    <i class="icon ion-md-star"></i>
-                    <img src="D:\studia\semestr 3\Frontend Development\frontend-development\Project1 - responsive website\images\stars.jpg" alt="">
-                </div>
-                <div class="activate-grid-item description">
-                    <i class="icon ion-md-star"></i>
-                    <h1>Star Gazing</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="activate-grid-item">
-                    <i class="icon ion-md-star"></i>
-                    <img src="D:\studia\semestr 3\Frontend Development\frontend-development\Project1 - responsive website\images\stars.jpg" alt="">
-                </div>
+            <div>
+                <h1>Star Gazing</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
             </div>
-        </div>
-    </section>   
-    
+            <div class="images">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+            <div>
+                <h1>Star Gazing</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+            </div>
+        </div>     
+        <div class="wrapper">
+            <div>
+                <h1>Star Gazing</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+            </div>
+            <div class="images">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+            <div>
+                <h1>Star Gazing</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+            </div>
+            <div class="images">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+        </div>        
+    </div>
+
     <script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
