--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -16,13 +16,13 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="nav">
             <div class="nav-brand">
                 <a href="index.html">
                     <img src= "images/logo.png" alt="">
                 </a>
             </div>
-            <div class="nav-lsit">
+            <div class="nav-list">
                 <div class="menu-icons close">
                     <i class="icon ion-md-close"></i>
                 </div>
@@ -53,9 +53,7 @@
     
     <section class="hero">
         <div class="container">
-           <div class="main-message">
-               <h3>Hellooooo</h3>
-           </div> 
+           <div class="main-message"></div> 
         </div>
     </section>       
 
@@ -68,6 +66,10 @@
                    Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel 
                    hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. 
                    Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est.</p> 
+              
+                <div class="container-arrow">
+                    <div class="arrow"></div>
+                </div>
             </div>
         </div>
     </section>    
