project1: scrolling to the bottom

--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -68,7 +68,7 @@
                    Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est.</p> 
               
                 <div class="container-arrow">
-                    <div class="arrow"></div>
+                    <div class="arrow" onclick="gotoBottom()"></div>
                 </div>
             </div>
         </div>
