--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -58,23 +58,26 @@
     </section>       
 
     <section class="project-background">
+        <div class="title-heading">
+            <h3>Tło projektu</h3>
+        </div>
         <div class="container">
-            <div class="title-heading">
-               <h3>Tło projektu</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, 
-                   scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. 
-                   Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel 
-                   hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. 
-                   Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est.</p> 
-              
-                <div class="container-arrow">
-                    <div class="arrow" onclick="gotoBottom()"></div>
-                </div>
-            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, 
+                scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. 
+                Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel 
+                hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. 
+                Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est.</p> 
+        </div>
+        <div class="container-arrow">
+            <div class="arrow" onclick="gotoBottom()"></div>
         </div>
     </section>    
 
-    <div class="my-grid">
+    <div class="news">
+        <div class="title-heading">
+            <h3>Aktualności</h3>
+         </div>
+
         <div class="wrapper">
             <div class="images">
                 <img src="/images/hiking.jpg" alt="">
@@ -106,7 +109,10 @@
             <div class="images">
                 <img src="/images/hiking.jpg" alt="">
             </div>
-        </div>        
+        </div>     
+        <div class="container-arrow">
+            <div class="arrow" onclick="gotoBottom()"></div>
+        </div>   
     </div>
 
     <script type="text/javascript" src="scripts.js"></script>
