--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -74,46 +74,76 @@
     </section>    
 
     <div class="news">
-        <div class="title-heading">
-            <h3>Aktualności</h3>
-         </div>
+            <div class="title-heading">
+                <h3>Aktualności</h3>
+            </div>
 
-        <div class="wrapper">
-            <div class="images">
-                <img src="/images/hiking.jpg" alt="">
-            </div>
-            <div>
-                <h1>Star Gazing</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
-            </div>
-            <div class="images">
-                <img src="/images/hiking.jpg" alt="">
-            </div>
-            <div>
-                <h1>Star Gazing</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
-            </div>
-        </div>     
-        <div class="wrapper">
-            <div>
-                <h1>Star Gazing</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
-            </div>
-            <div class="images">
-                <img src="/images/hiking.jpg" alt="">
-            </div>
-            <div>
-                <h1>Star Gazing</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
-            </div>
-            <div class="images">
-                <img src="/images/hiking.jpg" alt="">
-            </div>
-        </div>     
+            <div class="wrapper-news">
+                <div class="wrapper">
+                    <div class="images">
+                        <img src="/images/hiking.jpg" alt="">
+                    </div>
+                    <div>
+                        <h1>Star Gazing</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                        <div class="container-arrow-left">
+                            <div class="arrow" onclick="gotoBottom()"></div>
+                        </div>
+                    </div>
+                    <div class="images">
+                        <img src="/images/hiking.jpg" alt="">
+                    </div>
+                    <div>
+                        <h1>Star Gazing</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                        <div class="container-arrow-left">
+                            <div class="arrow" onclick="gotoBottom()"></div>
+                        </div>
+                    </div>
+                </div>     
+                <div class="wrapper">
+                    <div>
+                        <h1>Star Gazing</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                        <div class="container-arrow-left">
+                            <div class="arrow" onclick="gotoBottom()"></div>
+                        </div>
+                    </div>
+                    <div class="images">
+                        <img src="/images/hiking.jpg" alt="">
+                    </div>
+                    <div>
+                        <h1>Star gazing</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                        <div class="container-arrow-left">
+                            <div class="arrow" onclick="gotoBottom()"></div>
+                        </div>
+                    </div>
+                    <div class="images">
+                        <img src="/images/hiking.jpg" alt="">
+                    </div>
+                </div>   
+          </div>  
+            <div class="container-arrow">
+                <div class="arrow" onclick="gotoBottom()"></div>
+            </div>  
+    </div>
+
+
+    <section class="project-background">
+        <div class="title-heading">
+            <h3>Profil warsztatów</h3>
+        </div>
+        <div class="container">
+            <p><span class="bold-elem">Cel:</span> Lorem ipsum dolor sit amet</p>
+            <p><span class="bold-elem">Cel:</span> Lorem ipsum dolor sit amet</p>
+            <p><span class="bold-elem">Cel:</span> Lorem ipsum dolor sit amet</p>
+            <p><span class="bold-elem">Cel:</span> Lorem ipsum dolor sit amet</p>
+        </div>
         <div class="container-arrow">
             <div class="arrow" onclick="gotoBottom()"></div>
-        </div>   
-    </div>
+        </div>
+    </section>    
 
     <script type="text/javascript" src="scripts.js"></script>
 </body>
