--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css?family=Aldrich&display=swap" rel="stylesheet">
     <!--Our own stylesheet-->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="gallery.scss"/>  
+
 </head>
 <body>
     <header>
@@ -136,14 +138,244 @@
         </div>
         <div class="container">
             <p><span class="bold-elem">Cel:</span> Lorem ipsum dolor sit amet</p>
-            <p><span class="bold-elem">Cel:</span> Lorem ipsum dolor sit amet</p>
-            <p><span class="bold-elem">Cel:</span> Lorem ipsum dolor sit amet</p>
-            <p><span class="bold-elem">Cel:</span> Lorem ipsum dolor sit amet</p>
+            <p><span class="bold-elem">Grupa docelowa:</span> Lorem ipsum dolor sit amet</p>
+            <p><span class="bold-elem">Czas trwania projektu:</span> Lorem ipsum dolor sit amet</p>
+            <p><span class="bold-elem">Regulamin:</span> <span class="bold-elem-click">Kliknij Tutaj</span></p>
         </div>
         <div class="container-arrow">
             <div class="arrow" onclick="gotoBottom()"></div>
         </div>
     </section>    
+
+    <section class="gallery-container">
+        <div class="title-heading">
+            <h3>Galeria</h3>
+        </div>
+
+        <!-- <div class="gallery">
+            <div class="column">
+                <img src="/images/hiking.jpg" alt="">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+            <div class="column">
+                <img src="/images/hiking.jpg" alt="">
+                <img src="/images/hiking.jpg" alt="">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+        </div>     -->
+
+
+        <!-- <div class="row">
+            <div class="column">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+            <div class="column">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+            <div class="column">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+            <div class="column">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+            <div class="column">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+            <div class="column">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+            <div class="column">
+                <img src="/images/hiking.jpg" alt="">
+            </div>
+        </div> -->
+
+    <!-- <ul class="gallery">
+
+    <li>
+    <div class="imgwrap">
+        <a href="#">
+        <img src="https://unsplash.it/300/300/?random" alt="image">
+        <span class="imgmask"></span>
+        </a>
+    </div>
+    <a href="#">
+        <h2>Awesome</h2>
+    </a>
+    </li>
+
+    <li>
+    <div class="imgwrap">
+        <a href="#">
+        <img src="https://unsplash.it/301/301/?random" alt="image">
+        <span class="imgmask"></span>
+        </a>
+    </div>
+    <a href="#">
+        <h2>Amazing</h2>
+    </a>
+    </li>
+
+    <li>
+    <div class="imgwrap">
+        <a href="#">
+        <img src="https://unsplash.it/302/302/?random" alt="image">
+        <span class="imgmask"></span>
+        </a>
+    </div>
+    <a href="#">
+        <h2>Nice Pic</h2>
+    </a>
+    </li>
+
+    <li>
+    <div class="imgwrap">
+        <a href="#">
+        <img src="https://unsplash.it/303/303/?random" alt="image">
+        <span class="imgmask"></span>
+        </a>
+    </div>
+    <a href="#">
+        <h2>Sweet</h2>
+    </a>
+    </li>
+
+    <li>
+    <div class="imgwrap">
+        <a href="#">
+        <img src="https://unsplash.it/304/304/?random" alt="image">
+        <span class="imgmask"></span>
+        </a>
+    </div>
+    <a href="#">
+        <h2>Cute Image</h2>
+    </a>
+    </li>
+
+    <li>
+    <div class="imgwrap">
+        <a href="#">
+        <img src="https://unsplash.it/305/305/?random" alt="image">
+        <span class="imgmask"></span>
+        </a>
+    </div>
+    <a href="#">
+        <h2>Excellent</h2>
+    </a>
+    </li>
+
+    <li>
+    <div class="imgwrap">
+        <a href="#">
+        <img src="https://unsplash.it/306/306/?random" alt="image">
+        <span class="imgmask"></span>
+        </a>
+    </div>
+    <a href="#">
+        <h2>Tasty</h2>
+    </a>
+    </li>
+
+    <li>
+    <div class="imgwrap">
+        <a href="#">
+        <img src="https://unsplash.it/307/307/?random" alt="image">
+        <span class="imgmask"></span>
+        </a>
+    </div>
+    <a href="#">
+        <h2>Good Stuff</h2>
+    </a>
+    </li>
+
+    <li>
+    <div class="imgwrap">
+        <a href="#">
+        <img src="https://unsplash.it/308/308/?random" alt="image">
+        <span class="imgmask"></span>
+        </a>
+    </div>
+    <a href="#">
+        <h2>Pretty</h2>
+    </a>
+    </li>
+
+    <li>
+    <div class="imgwrap">
+        <a href="#">
+        <img src="https://unsplash.it/309/309/?random" alt="image">
+        <span class="imgmask"></span>
+        </a>
+    </div>
+    <a href="#">
+        <h2>Fine Art</h2>
+    </a>
+    </li>
+
+    <li>
+    <div class="imgwrap">
+        <a href="#">
+        <img src="https://unsplash.it/310/310/?random" alt="image">
+        <span class="imgmask"></span>
+        </a>
+    </div>
+    <a href="#">
+        <h2>Super Duper</h2>
+    </a>
+    </li>
+    </ul>
+
+
+    </section>     -->
+
+
+    <section class="recepies">
+        
+        <div class="title-heading">
+            <h3>Przepisy</h3>
+        </div>
+
+        <div class="dishes-container">
+            <div class="dish">
+                <img src="/icons/ikona_1_sniadanie.svg" alt="">
+                <p>śniadania</p>
+            </div>
+            <div class="dish">
+                <img src="/icons/ikona_2_sniadanie.svg" alt="">
+                <p>II śniadanie</p>
+            </div>
+            <div class="dish">
+                <img src="/icons/ikona_obiad.svg" alt="">
+                <p>obiad</p>
+            </div>
+            <div class="dish">
+                <img src="/icons/ikona_podwieczorek.svg" alt="">
+                <p>podwieczorek</p>
+            </div>
+            <div class="dish">
+                <img src="/icons/ikona_kolacja.svg" alt="">
+                <p>kolacja</p>
+            </div>
+        </div>
+
+
+    </section>    
+
+    <section>
+        <div class="title-heading">
+            <h3>Dla Rodziców</h3>
+        </div>
+    </section>  
+
+    <section>
+        <div class="title-heading">
+            <h3>Organizatorzy</h3>
+        </div>
+    </section>  
 
     <script type="text/javascript" src="scripts.js"></script>
 </body>
