organizers container added

--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -365,17 +365,48 @@
 
     </section>    
 
-    <section>
+    <section class="for-parents-container">
         <div class="title-heading">
             <h3>Dla Rodziców</h3>
         </div>
+
+        <div>
+            <div class="row">
+                <p>Wpływ żywienia na zdrowie</p>
+                <p>Wpływ żywienia na zdrowie</p>
+                <p>Wpływ żywienia na zdrowie</p>
+            </div>
+            <div class="row">
+                <p>Wpływ żywienia na zdrowie</p>
+                <p>Wpływ żywienia na zdrowie</p>
+                <p>Wpływ żywienia na zdrowie</p>
+            </div>
+        </div>
+      
     </section>  
+
+
+  
 
     <section>
         <div class="title-heading">
             <h3>Organizatorzy</h3>
         </div>
-    </section>  
+        <div  class="organizer-container">
+            <div class="part">
+                <p>Organizatorzy</p>
+                <img src="/images/organizers/GF_logo_stopka.svg" alt="">
+            </div>
+            <div class="part">
+                <p>Patroni</p>
+                <img src="/images/organizers/logo_JERONIMO_MARTINS.svg" alt="">
+            </div>
+            <div class="part">
+                <p>Sponsorzy</p>
+                <img src="/images/organizers/biedronka_logo_stopka.svg" alt="">
+            </div>
+        </div>
+    </div>
 
     <script type="text/javascript" src="scripts.js"></script>
 </body>
