--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -63,16 +63,18 @@
         <div class="title-heading">
             <h3>Tło projektu</h3>
         </div>
-        <div class="container">
+        <!-- <div class="container"> -->
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, 
                 scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. 
                 Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel 
                 hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. 
                 Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est.</p> 
-        </div>
+        <!-- </div> -->
+
         <div class="container-arrow">
             <div class="arrow" onclick="gotoBottom()"></div>
         </div>
+      
     </section>    
 
     <div class="news">
@@ -405,6 +407,14 @@
                 <p>Sponsorzy</p>
                 <img src="/images/organizers/biedronka_logo_stopka.svg" alt="">
             </div>
+        </div>
+    </div>
+
+
+    <div class="footer-container">
+        <img src= "images/foot.png" alt="">
+        <div class="stip">
+            <p>sdsads</p>
         </div>
     </div>
 
