--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -12,9 +12,19 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Aldrich&display=swap" rel="stylesheet">
     <!--Our own stylesheet-->
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="gallery.scss"/>  
-
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/organizer.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/recepies.css">
+    <link rel="stylesheet" href="/css/gallery.css">
+    <link rel="stylesheet" href="/css/news.css">
+    <link rel="stylesheet" href="/css/arrow.css">
+    <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="/css/hero.css">
+    <link rel="stylesheet" href="/css/media.css">
+    <link rel="stylesheet" href="/css/project-background.css">
+    <link rel="stylesheet" href="/css/for-parents.css">
 </head>
 <body>
     <header>
@@ -63,13 +73,13 @@
         <div class="title-heading">
             <h3>Tło projektu</h3>
         </div>
-        <!-- <div class="container"> -->
+        <div class="container-space">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, 
                 scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. 
                 Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel 
                 hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. 
                 Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est.</p> 
-        <!-- </div> -->
+        </div>
 
         <div class="container-arrow">
             <div class="arrow" onclick="gotoBottom()"></div>
@@ -78,67 +88,66 @@
     </section>    
 
     <div class="news">
-            <div class="title-heading">
-                <h3>Aktualności</h3>
-            </div>
+        <div class="title-heading">
+            <h3>Aktualności</h3>
+        </div>
 
-            <div class="wrapper-news">
-                <div class="wrapper">
-                    <div class="images">
-                        <img src="/images/hiking.jpg" alt="">
+        <div class="wrapper-news">
+            <div class="wrapper">
+                <div class="news-images">
+                    <img src="/images/hiking.jpg" alt="">
+                </div>
+                <div>
+                    <h1>Star Gazing</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                    <div class="container-arrow-left">
+                        <div class="arrow" onclick="gotoBottom()"></div>
                     </div>
-                    <div>
-                        <h1>Star Gazing</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
-                        <div class="container-arrow-left">
-                            <div class="arrow" onclick="gotoBottom()"></div>
-                        </div>
+                </div>
+                <div class="news-images">
+                    <img src="/images/hiking.jpg" alt="">
+                </div>
+                <div>
+                    <h1>Star Gazing</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                    <div class="container-arrow-left">
+                        <div class="arrow" onclick="gotoBottom()"></div>
                     </div>
-                    <div class="images">
-                        <img src="/images/hiking.jpg" alt="">
+                </div>
+            </div>     
+            <div class="wrapper">
+                <div>
+                    <h1>Star Gazing</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                    <div class="container-arrow-left">
+                        <div class="arrow" onclick="gotoBottom()"></div>
                     </div>
-                    <div>
-                        <h1>Star Gazing</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
-                        <div class="container-arrow-left">
-                            <div class="arrow" onclick="gotoBottom()"></div>
-                        </div>
+                </div>
+                <div class="news-images">
+                    <img src="/images/hiking.jpg" alt="">
+                </div>
+                <div>
+                    <h1>Star gazing</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                    <div class="container-arrow-left">
+                        <div class="arrow" onclick="gotoBottom()"></div>
                     </div>
-                </div>     
-                <div class="wrapper">
-                    <div>
-                        <h1>Star Gazing</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
-                        <div class="container-arrow-left">
-                            <div class="arrow" onclick="gotoBottom()"></div>
-                        </div>
-                    </div>
-                    <div class="images">
-                        <img src="/images/hiking.jpg" alt="">
-                    </div>
-                    <div>
-                        <h1>Star gazing</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
-                        <div class="container-arrow-left">
-                            <div class="arrow" onclick="gotoBottom()"></div>
-                        </div>
-                    </div>
-                    <div class="images">
-                        <img src="/images/hiking.jpg" alt="">
-                    </div>
-                </div>   
-          </div>  
-            <div class="container-arrow">
-                <div class="arrow" onclick="gotoBottom()"></div>
-            </div>  
+                </div>
+                <div class="news-images">
+                    <img src="/images/hiking.jpg" alt="">
+                </div>
+            </div>   
+      </div>  
+        <div class="container-arrow">
+            <div class="arrow" onclick="gotoBottom()"></div>
+        </div>  
     </div>
 
-
-    <section class="project-background">
+    <section class="workshops-profile">
         <div class="title-heading">
             <h3>Profil warsztatów</h3>
         </div>
-        <div class="container">
+        <div class="container-space">
             <p><span class="bold-elem">Cel:</span> Lorem ipsum dolor sit amet</p>
             <p><span class="bold-elem">Grupa docelowa:</span> Lorem ipsum dolor sit amet</p>
             <p><span class="bold-elem">Czas trwania projektu:</span> Lorem ipsum dolor sit amet</p>
@@ -153,20 +162,7 @@
         <div class="title-heading">
             <h3>Galeria</h3>
         </div>
-
-        <!-- <div class="gallery">
-            <div class="column">
-                <img src="/images/hiking.jpg" alt="">
-                <img src="/images/hiking.jpg" alt="">
-            </div>
-            <div class="column">
-                <img src="/images/hiking.jpg" alt="">
-                <img src="/images/hiking.jpg" alt="">
-                <img src="/images/hiking.jpg" alt="">
-            </div>
-        </div>     -->
-
-
+    </section>
         <!-- <div class="row">
             <div class="column">
                 <img src="/images/hiking.jpg" alt="">
@@ -196,145 +192,6 @@
             </div>
         </div> -->
 
-    <!-- <ul class="gallery">
-
-    <li>
-    <div class="imgwrap">
-        <a href="#">
-        <img src="https://unsplash.it/300/300/?random" alt="image">
-        <span class="imgmask"></span>
-        </a>
-    </div>
-    <a href="#">
-        <h2>Awesome</h2>
-    </a>
-    </li>
-
-    <li>
-    <div class="imgwrap">
-        <a href="#">
-        <img src="https://unsplash.it/301/301/?random" alt="image">
-        <span class="imgmask"></span>
-        </a>
-    </div>
-    <a href="#">
-        <h2>Amazing</h2>
-    </a>
-    </li>
-
-    <li>
-    <div class="imgwrap">
-        <a href="#">
-        <img src="https://unsplash.it/302/302/?random" alt="image">
-        <span class="imgmask"></span>
-        </a>
-    </div>
-    <a href="#">
-        <h2>Nice Pic</h2>
-    </a>
-    </li>
-
-    <li>
-    <div class="imgwrap">
-        <a href="#">
-        <img src="https://unsplash.it/303/303/?random" alt="image">
-        <span class="imgmask"></span>
-        </a>
-    </div>
-    <a href="#">
-        <h2>Sweet</h2>
-    </a>
-    </li>
-
-    <li>
-    <div class="imgwrap">
-        <a href="#">
-        <img src="https://unsplash.it/304/304/?random" alt="image">
-        <span class="imgmask"></span>
-        </a>
-    </div>
-    <a href="#">
-        <h2>Cute Image</h2>
-    </a>
-    </li>
-
-    <li>
-    <div class="imgwrap">
-        <a href="#">
-        <img src="https://unsplash.it/305/305/?random" alt="image">
-        <span class="imgmask"></span>
-        </a>
-    </div>
-    <a href="#">
-        <h2>Excellent</h2>
-    </a>
-    </li>
-
-    <li>
-    <div class="imgwrap">
-        <a href="#">
-        <img src="https://unsplash.it/306/306/?random" alt="image">
-        <span class="imgmask"></span>
-        </a>
-    </div>
-    <a href="#">
-        <h2>Tasty</h2>
-    </a>
-    </li>
-
-    <li>
-    <div class="imgwrap">
-        <a href="#">
-        <img src="https://unsplash.it/307/307/?random" alt="image">
-        <span class="imgmask"></span>
-        </a>
-    </div>
-    <a href="#">
-        <h2>Good Stuff</h2>
-    </a>
-    </li>
-
-    <li>
-    <div class="imgwrap">
-        <a href="#">
-        <img src="https://unsplash.it/308/308/?random" alt="image">
-        <span class="imgmask"></span>
-        </a>
-    </div>
-    <a href="#">
-        <h2>Pretty</h2>
-    </a>
-    </li>
-
-    <li>
-    <div class="imgwrap">
-        <a href="#">
-        <img src="https://unsplash.it/309/309/?random" alt="image">
-        <span class="imgmask"></span>
-        </a>
-    </div>
-    <a href="#">
-        <h2>Fine Art</h2>
-    </a>
-    </li>
-
-    <li>
-    <div class="imgwrap">
-        <a href="#">
-        <img src="https://unsplash.it/310/310/?random" alt="image">
-        <span class="imgmask"></span>
-        </a>
-    </div>
-    <a href="#">
-        <h2>Super Duper</h2>
-    </a>
-    </li>
-    </ul>
-
-
-    </section>     -->
-
-
     <section class="recepies">
         
         <div class="title-heading">
@@ -363,22 +220,20 @@
                 <p>kolacja</p>
             </div>
         </div>
-
-
     </section>    
 
-    <section class="for-parents-container">
+    <section class="for-parents">
         <div class="title-heading">
             <h3>Dla Rodziców</h3>
         </div>
 
         <div>
-            <div class="row">
+            <div  class="parent-container">
                 <p>Wpływ żywienia na zdrowie</p>
                 <p>Wpływ żywienia na zdrowie</p>
                 <p>Wpływ żywienia na zdrowie</p>
             </div>
-            <div class="row">
+            <div  class="parent-container">
                 <p>Wpływ żywienia na zdrowie</p>
                 <p>Wpływ żywienia na zdrowie</p>
                 <p>Wpływ żywienia na zdrowie</p>
@@ -387,10 +242,7 @@
       
     </section>  
 
-
-  
-
-    <section>
+    <section class="organizer">
         <div class="title-heading">
             <h3>Organizatorzy</h3>
         </div>
@@ -408,7 +260,7 @@
                 <img src="/images/organizers/biedronka_logo_stopka.svg" alt="">
             </div>
         </div>
-    </div>
+    </section>
 
 
     <div class="footer-container">
