--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -252,11 +252,8 @@
 
     <div class="footer-container">
         <img src= "images/foot.png" alt="">
-        <div class="stip">
-            <p>sdsads</p>
-        </div>
+        <div class="footer">.</div>
     </div>
-
     <script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
